@@ -716,6 +716,8 @@ public abstract class TownyDatabaseHandler extends TownyDataSource {
 		if (preEvent.isCancelled())
 			return;
 		
+		Resident mayor = town.getMayor();
+		
 		removeTownBlocks(town);
 
 		List<Resident> toSave = new ArrayList<>(town.getResidents());
@@ -761,7 +763,7 @@ public abstract class TownyDatabaseHandler extends TownyDataSource {
 		plugin.resetCache();
 		deleteTown(town);
 		
-		BukkitTools.getPluginManager().callEvent(new DeleteTownEvent(town));
+		BukkitTools.getPluginManager().callEvent(new DeleteTownEvent(town, mayor.getUUID()));
 	}
 
 	@Override
@@ -773,6 +775,8 @@ public abstract class TownyDatabaseHandler extends TownyDataSource {
 		if (preEvent.isCancelled())
 			return;
 
+		Resident king = nation.getKing();
+		
 		//search and remove from all ally/enemy lists
 		List<Nation> toSaveNation = new ArrayList<>();
 		for (Nation toCheck : new ArrayList<>(universe.getNationsMap().values()))
@@ -829,7 +833,7 @@ public abstract class TownyDatabaseHandler extends TownyDataSource {
 
 		plugin.resetCache();
 
-		BukkitTools.getPluginManager().callEvent(new DeleteNationEvent(nation));
+		BukkitTools.getPluginManager().callEvent(new DeleteNationEvent(nation, king.getUUID()));
 	}
 
 	@Override
