@@ -5603,3 +5603,4 @@ v0.92.0.11:
   - API: Added TownyLoadedDatabaseEvent.
     - Called when has successfully loaded the database on startup as well as /ta database load and /ta reload db|all.
   - Add Nation#getMutualAllies() and Nation#hasMutualAlly() from SiegeWar.
+  - API: add king and mayor UUIDs to the DeleteNationEvent & DeleteTownEvent.
